--- a/requirements.txt
+++ b/requirements.txt
@@ -1,173 +1,61 @@
-aiohttp==3.9.5
-aiosignal==1.3.1
-amqp==5.2.0
-annotated-types==0.6.0
-anyio==4.2.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
+anyio==4.4.0
 asgiref==3.8.1
 asttokens==2.4.1
-async-lru==2.0.4
-attrs==23.2.0
-Babel==2.14.0
-beautifulsoup4==4.12.2
-billiard==4.2.0
-bitarray==2.9.2
-bleach==6.1.0
-celery==5.4.0
-certifi==2024.2.2
-cffi==1.16.0
+beautifulsoup4==4.12.3
+certifi==2024.7.4
 charset-normalizer==3.3.2
-ckzg==1.0.2
-click==8.1.7
-click-didyoumean==0.3.1
-click-plugins==1.1.1
-click-repl==0.3.0
 colorama==0.4.6
-comm==0.2.0
-contourpy==1.2.0
-cron-descriptor==1.4.3
-cryptography==42.0.8
-cycler==0.12.1
-cytoolz==0.12.3
-debugpy==1.8.0
 decorator==5.1.1
-defusedxml==0.7.1
-distro==1.9.0
 Django==5.0.6
-django-celery-beat==2.6.0
-django-celery-results==2.5.1
+django-cors-headers==4.4.0
 django-environ==0.11.2
-django-timezone-field==6.1.0
-djangorestframework==3.15.1
+djangorestframework==3.15.2
 environ==1.0
-et-xmlfile==1.1.0
-eth-account==0.11.2
-eth-hash==0.7.0
-eth-keyfile==0.8.1
-eth-keys==0.5.1
-eth-rlp==1.0.1
-eth-typing==4.2.3
-eth-utils==4.1.1
-eth_abi==5.1.0
 executing==2.0.1
-fastjsonschema==2.19.0
-fonttools==4.47.0
-fqdn==1.5.1
-frozenlist==1.4.1
+frozendict==2.4.4
+greenlet==3.0.3
 h11==0.14.0
-hexbytes==0.3.1
-httpcore==1.0.2
-httpx==0.26.0
+html5lib==1.1
+httpcore==1.0.5
+httpx==0.27.0
 idna==3.7
-ipykernel==6.27.1
-ipython==8.18.1
-ipywidgets==8.1.1
-isoduration==20.11.0
+ipython==8.26.0
 jedi==0.19.1
-Jinja2==3.1.2
-json5==0.9.14
-jsonpointer==2.4
-jsonschema==4.22.0
-jsonschema-specifications==2023.12.1
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.9.0
-jupyter-lsp==2.2.1
-jupyter_client==8.6.0
-jupyter_core==5.5.0
-jupyter_server==2.12.1
-jupyter_server_terminals==0.5.0
-jupyterlab==4.0.9
-jupyterlab-widgets==3.0.9
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.25.2
-kiwisolver==1.4.5
-kombu==5.3.7
-lru-dict==1.2.0
-MarkupSafe==2.1.3
-matplotlib==3.8.2
-matplotlib-inline==0.1.6
-mistune==3.0.2
-multidict==6.0.5
-mysqlclient==2.2.4
-nbclient==0.9.0
-nbconvert==7.13.1
-nbformat==5.9.2
-nest-asyncio==1.5.8
-notebook==7.0.6
-notebook_shim==0.2.3
-numpy==1.26.2
-openai==1.7.0
-openpyxl==3.1.2
-overrides==7.4.0
-packaging==23.2
-pandas==2.1.4
-pandocfilters==1.5.0
-parsimonious==0.10.0
-parso==0.8.3
-pdfminer.six==20231228
-pdfplumber==0.11.0
-pillow==10.2.0
-platformdirs==4.0.0
-prometheus-client==0.19.0
+lxml==5.2.2
+matplotlib-inline==0.1.7
+MouseInfo==0.1.3
+multitasking==0.0.11
+numpy==2.0.0
+pandas==2.2.2
+parso==0.8.4
+peewee==3.17.5
+pillow==10.4.0
+platformdirs==4.2.2
 prompt_toolkit==3.0.47
-protobuf==5.27.0
-psutil==5.9.6
 psycopg2-binary==2.9.9
 pure-eval==0.2.2
-pycparser==2.22
-pycryptodome==3.20.0
-pydantic==2.5.3
-pydantic_core==2.14.6
-Pygments==2.17.2
-pyparsing==3.1.1
-PyPDF2==3.0.1
-pypdfium2==4.29.0
-python-crontab==3.1.0
+PyAutoGUI==0.9.54
+PyGetWindow==0.0.9
+Pygments==2.18.0
+PyMsgBox==1.0.9
+pyperclip==1.9.0
+PyRect==0.2.0
+PyScreeze==0.1.30
 python-dateutil==2.9.0.post0
-python-json-logger==2.0.7
-pytz==2023.3.post1
-pyunormalize==15.1.0
-pywin32==306
-pywinpty==2.0.12
-PyYAML==6.0.1
-pyzmq==25.1.1
-qtconsole==5.5.1
-QtPy==2.4.1
-redis==5.0.6
-referencing==0.35.1
-regex==2024.5.15
-requests==2.32.2
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rlp==4.0.1
-rpds-py==0.18.1
-Send2Trash==1.8.2
+python-telegram-bot==21.4
+pytweening==1.2.0
+pytz==2024.1
+requests==2.32.3
 six==1.16.0
-sniffio==1.3.0
+sniffio==1.3.1
 soupsieve==2.5
+SQLAlchemy==2.0.31
 sqlparse==0.5.0
 stack-data==0.6.3
-terminado==0.18.0
-tiktoken==0.6.0
-tinycss2==1.2.1
-toolz==0.12.1
-tornado==6.4
-tqdm==4.66.1
-traitlets==5.14.0
-types-python-dateutil==2.8.19.14
-typing_extensions==4.12.0
+traitlets==5.14.3
+typing_extensions==4.12.2
 tzdata==2024.1
-uri-template==1.3.0
-urllib3==2.2.1
-vine==5.1.0
+urllib3==2.2.2
 wcwidth==0.2.13
-web3==6.19.0
-webcolors==1.13
 webencodings==0.5.1
-websocket-client==1.8.0
-websockets==12.0
-widgetsnbextension==4.0.9
-yarl==1.9.4
+yfinance==0.2.40
